--- a/HW3/HW3/HW3.csproj
+++ b/HW3/HW3/HW3.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="GeneticAlgorithm">
-      <HintPath>..\..\..\..\..\Downloads\btl_GA\GeneticAlgorithm\bin\Debug\GeneticAlgorithm.dll</HintPath>
+      <HintPath>..\..\..\..\..\Dropbox\HTW-Berlin\Faecher\2. Semester\Algorithms and Optimizations\Hausaufgabe 3\btl_GA\GeneticAlgorithm\bin\Debug\GeneticAlgorithm.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
