--- a/HW3/HW3/HW3.csproj
+++ b/HW3/HW3/HW3.csproj
@@ -47,7 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GenericAlgorithm.cs" />
+    <Compile Include="GA_PMX.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
