--- a/HW3/HW3/HW3.csproj
+++ b/HW3/HW3/HW3.csproj
@@ -32,9 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="GeneticAlgorithm">
-      <HintPath>..\..\..\..\..\Dropbox\HTW-Berlin\Faecher\2. Semester\Algorithms and Optimizations\Hausaufgabe 3\btl_GA\GeneticAlgorithm\bin\Debug\GeneticAlgorithm.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GA.cs" />
     <Compile Include="GA_PMX.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -54,6 +52,8 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Genome.cs" />
+    <Compile Include="GenomeComparer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimulatedAnnealing.cs" />
